# diffusion-vpr

./: .env.example  .gitignore  0-explore-sues-200.ipynb  1-baseline-s2s-diffusionsat-naive-results.csv  1-baseline-s2s-diffusionsat-naive.ipynb  1-baseline-u2s-diffusionsat-naive-results.csv  2-explore-diffusionsat-speedup.ipynb  2-explore-training-fusion-embedder.ipynb  CLAUDE.md  LOG.md  README.md  pod-configure.sh  pod-downloads.sh  pyproject.toml  setup-runpod.sh  train-supervised.py  train.py
.claude/: settings.json
docs/: caevl.md  image-augmentations.md  ssl4eo-s12-dataset.md  supervised-baseline.md  vild-dataset.md
notebooks/: 0-explore-sues-200.ipynb  0-save-train-visloc-imgs.ipynb  1-baseline-comparison-summary.ipynb  1-baseline-diffusionsat-zeroshot.ipynb  1-baseline-dift-zeroshot.ipynb  1-baseline-dinov2-zeroshot.ipynb  1-baseline-dinov3-zeroshot.ipynb  1-baseline-dinov3sat-zeroshot.ipynb  1-baseline-geosynth-canny-zeroshot.ipynb  1-baseline-own-sd21-zeroshot.ipynb  1-baseline-remoteclip-zeroshot.ipynb  1-baseline-rvsa-vitae-zeroshot.ipynb  1-baseline-s2s-diffusionsat-naive.ipynb  1-baseline-satmaepp-zeroshot.ipynb  1-baseline-sd21-zeroshot.ipynb  1-diffusionsat-zeroshot-s2s-eval.ipynb  1-diffusionsat-zeroshot-u2s-eval.ipynb  2-evaluate-timesteps.py  2-explore-diffusionsat-speedup.ipynb  3-explore-diffusionsat-features.ipynb
results/: 1-baseline-comparison.csv  1-baseline-s2s-diffusionsat-naive-results.csv  1-baseline-u2s-diffusionsat-naive-results.csv  2-evaluate-timesteps.csv
src/: backbone.py  data_transforms.py  datasets.py  embedders.py  evaluation.py  ldm_extractor.py  losses.py  model.py  retrievers.py  utils.py
src/backbones/: dift.py  satdifuser_diffusionsat.py  stable_diffusion.py
src/datasets/: visloc.py
