[project]
name = "diffusion-vpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.3",
    "faiss-cpu>=1.13.2",
    "fiftyone>=1.12.0",
    "gdown>=5.2.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "satdifuser",
    "lightning>=2.6.1",
    "ipywidgets>=8.1.8",
    "setuptools<81",
    "python-dotenv>=1.2.2",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = ["ruff>=0.14.9"]

[tool.ruff]
extend-include = ["*.ipynb"]
indent-width = 2
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["E402"]
unfixable = ["F401"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.setuptools]
py-modules = []

[tool.uv.sources]
satdifuser = { path = "../SatDiFuser", editable = true }

[tool.ty.environment]
extra-paths = ["../SatDiFuser"]

[tool.ty.rules]
unresolved-attribute = "ignore"
